logs/watchdog_20251012_1515.log
[12/10/2025 15:15:01,62] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 15:15:01,86] END WATCHDOG 
